--- a/ImageCropper.nuspec
+++ b/ImageCropper.nuspec
@@ -1,39 +1,37 @@
-<?xml version="1.0"?>
-<package >
+<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>ImageCropper.Forms</id>
-    <version>0.1.6</version>
+    <id>ImageCropper.Forms.Fix.v5</id>
+    <version>0.2.1</version>
     <authors>Marko Rothstein</authors>
     <owners>Marko Rothstein</owners>
-    <projectUrl>https://github.com/stormlion227/ImageCropper.Forms</projectUrl>
-    <licenseUrl>https://github.com/stormlion227/ImageCropper.Forms/blob/master/LICENSE.md</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <license>https://github.com/kinglionsoft/ImageCropper.Forms/blob/master/LICENSE.md</license>
+    <projectUrl>https://github.com/kinglionsoft/ImageCropper.Forms</projectUrl>
     <description>Xamarin.Forms plugin to crop and rotate photos.</description>
     <summary>Xamarin.Forms plugin to crop and rotate photos. Supports Android and iOS.</summary>
-    <releaseNotes>First release.</releaseNotes>
+    <releaseNotes>Allows to customize options of MediaPlugin.</releaseNotes>
     <copyright>© StormLion 2018</copyright>
     <tags>xamarin forms crop rotate photo image</tags>
     <dependencies>
       <group>
-        <dependency id="Xamarin.Forms" version="2.5.0"/>
-        <dependency id="Xam.Plugin.Media" version="3.1.2" />
+        <dependency id="Xamarin.Forms" version="4.0.0.425677" />
+        <dependency id="Xam.Plugin.Media" version="4.0.1.5" />
       </group>
-      <group targetFramework="monoandroid">
-        <dependency id="Xamarin.Android.Support.Exif" version="27.0.2" />
+      <group targetFramework="MonoAndroid0.0">
+        <dependency id="Xamarin.Android.Support.Exif" version="28.0.0.1" />
       </group>
     </dependencies>
   </metadata>
-  <files>
-    
-    <file src="ImageCropper/ImageCropper/bin/Release/netstandard2.0/Stormlion.ImageCropper.dll" target="lib/netstandard2.0" />
+    <files>
+      <file src="ImageCropper/ImageCropper/bin/Release/netstandard2.0/Stormlion.ImageCropper.dll" target="lib/netstandard2.0" />
 
-    <file src="ImageCropper/ImageCropper.Android/bin/Release/Stormlion.ImageCropper.dll" target="lib/MonoAndroid" />
-    <file src="ImageCropper/ImageCropper.Android/bin/Release/Binding_AndroidImageCropper.dll" target="lib/MonoAndroid" />
-    <file src="ImageCropper/ImageCropper.Android/bin/Release/Stormlion.ImageCropper.Android.dll" target="lib/MonoAndroid" />
-    
+      <file src="ImageCropper/ImageCropper.Android/bin/Release/Stormlion.ImageCropper.dll" target="lib/MonoAndroid" />
+      <file src="ImageCropper/ImageCropper.Android/bin/Release/Binding_AndroidImageCropper.dll" target="lib/MonoAndroid" />
+      <file src="ImageCropper/ImageCropper.Android/bin/Release/Stormlion.ImageCropper.Android.dll" target="lib/MonoAndroid" />
 
-    <file src="ImageCropper/ImageCropper.iOS/bin/Release/Stormlion.ImageCropper.dll" target="lib/Xamarin.iOS10" />
-    <file src="ImageCropper/ImageCropper.iOS/bin/Release/TOCropViewController.dll" target="lib/Xamarin.iOS10" />
-    <file src="ImageCropper/ImageCropper.iOS/bin/Release/Stormlion.ImageCropper.iOS.dll" target="lib/Xamarin.iOS10" />
-  </files>
+      <file src="ImageCropper/ImageCropper.iOS/bin/Release/Stormlion.ImageCropper.dll" target="lib/Xamarin.iOS10" />
+      <file src="ImageCropper/ImageCropper.iOS/bin/Release/TOCropViewController.dll" target="lib/Xamarin.iOS10" />
+      <file src="ImageCropper/ImageCropper.iOS/bin/Release/Stormlion.ImageCropper.iOS.dll" target="lib/Xamarin.iOS10" />
+    </files>
 </package>
